# pyo3-poker-eval

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.manylinux  Dockerfile.win  MANIFEST.in  README.md  build-manylinux-wheels.sh  pyproject.toml
pyo3_poker_eval/: __init__.py
rust/: lib.rs  poker.rs
scripts/: run-1-trial.py
tests/: __init__.py  test_doc.py  test_poker.py  test_stats.py
