[build-system]
requires = ["setuptools >= 69.0", "setuptools-rust >= 1.8", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "pyo3_poker_eval"
version = "0.1.0"
authors = [{ name = "firstname lastname", email = "author@gmail.com" }]
description = "Poker eval library"
keywords = ["poker", "rust"]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.10"
dependencies = [
    # none
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
repository = "https://github.com/oscar6echo/pyo3-poker-eval.git"
# homepage = ""
# documentation = ""
# issues = ""
# changelog = ""


# [tool.setuptools.packages.find]
# where = ["."]
# include = ["*"]
# exclude = ["tests"]

[tool.setuptools]
packages = ["pyo3_poker_eval"]

# Cf. https://setuptools-rust.readthedocs.io/en/v1.1.2/reference.html
[[tool.setuptools-rust.ext-modules]]
# Private Rust extension module to be nested into the Python package
target = "pyo3_poker_eval._rust"
# IMPORTANT: build with --release -> large impact on speed
debug = false
# reduce wheel size
strip = "All"
# used for cross compile
# args = ...
